Remove tags from translated strings

--- a/templates/partners.html
+++ b/templates/partners.html
@@ -19,7 +19,7 @@
         <div class="col-12 col-md-6">
           <div class="text-container">
             <p>
-              {{gettext("<strong>Teams all over the world are building their projects using Origin’s protocols. We are looking for more amazing people to join our mission.</strong>")}}
+              <strong>{{gettext("Teams all over the world are building their projects using Origin’s protocols. We are looking for more amazing people to join our mission.")}}</strong>
             </p>
           </div>
         </div>
@@ -275,7 +275,7 @@
                     <input name="website" id="website" type="url" class="form-control" placeholder="{{gettext('https://websitename.com')}}" />
                   </div>
                   <div class="form-group">
-                    <label for="note">{{gettext("<strong>Anything else we should know?</strong> (optional)")}}</label>
+                    <label for="note"><strong>{{gettext("Anything else we should know?")}}</strong> ({{gettext("optional")}})</label>
                   </div>
                   <div class="form-group flex">
                     <div class="flex-offset"></div>
