--- a/templates/presale.html
+++ b/templates/presale.html
@@ -20,7 +20,9 @@
         </div>
         <div class="col-12 col-md-6">
           <p>
-            {{gettext("<strong>The exact date and details of the Origin presale have not yet been announced.</strong> Please fill out this form if you are interested in participating in the Origin presale and want to be updated as more details are announced.")}}
+            <strong>{{gettext("The exact date and details of the Origin presale have not yet been announced.")}}</strong>
+            &nbsp;
+            {{gettext("Please fill out this form if you are interested in participating in the Origin presale and want to be updated as more details are announced.")}}
           </p>
         </div>
       </div>
@@ -119,7 +121,7 @@
 
               <div class="form-group">
                 <input type="hidden" name="desired_allocation_currency" value="USD" />
-                <label for="desired_allocation">{{gettext("<strong>Desired allocation</strong>")}}</label>
+                <label for="desired_allocation"><strong>{{gettext("Desired allocation")}}</strong></label>
                 <div class="input-group">
                   <input name="desired_allocation" type="text" class="form-control" id="desired_allocation" placeholder="25000">
                   <div class="input-group-btn">
@@ -391,12 +393,12 @@
               </div>
 
               <div class="form-group">
-                <label for="sending_addr">{{gettext("<strong>ETH or BTC address you plan to send from?</strong> (optional)")}}</label>
+                <label for="sending_addr"><strong>{{gettext("ETH or BTC address you plan to send from?")}}</strong>&nbsp;(optional)</label>
                 <input name="sending_addr" id="desired_allocation" id="sending_addr" class="form-control" placeholder="0x..." />
               </div>
 
               <div class="form-group">
-                <label for="note">{{gettext("<strong>Anything else we should know?</strong> (optional)")}}</label>
+                <label for="note"><strong>{{gettext("Anything else we should know?")}}</strong>&nbsp;(optional)</label>
                 <input name="note" id="note" class="form-control" placeholder="" />
               </div>
 
