Reduce large and remove unused files

--- a/templates/team.html
+++ b/templates/team.html
@@ -317,7 +317,7 @@
                 <div class="col-12 col-md-6 col-xl-3">
                   <div class="team-member">
                     <div class="headshot-wrapper">
-                      <img src="/static/img/headshot-gagan.png" class="headshot" alt="Gagandeep Singh headshot">
+                      <img src="/static/img/headshot-gagan.jpg" class="headshot" alt="Gagandeep Singh headshot">
                     </div>
                     <div class="name">
                       <a href="https://www.linkedin.com/in/gagandeep-singh-60040b92/" target="_blank">{{ gettext("Gagandeep Singh") }}
@@ -351,7 +351,7 @@
                 <div class="col-12 col-md-6 col-xl-3">
                   <div class="team-member">
                     <div class="headshot-wrapper">
-                      <img src="/static/img/headshot-nick.png" class="headshot" alt="Nick Poulden headshot">
+                      <img src="/static/img/headshot-nick.jpg" class="headshot" alt="Nick Poulden headshot">
                     </div>
                     <div class="name">
                       <a href="http://poulden.com/" target="_blank">{{ gettext("Nick Poulden") }}
@@ -368,7 +368,7 @@
                 <div class="col-12 col-md-6 col-xl-3">
                   <div class="team-member">
                     <div class="headshot-wrapper">
-                      <img src="/static/img/headshot-micah.png" class="headshot" alt="Micah Alcorn headshot">
+                      <img src="/static/img/headshot-micah.jpg" class="headshot" alt="Micah Alcorn headshot">
                     </div>
                     <div class="name">
                       <a href="https://twitter.com/micahalcorn" target="_blank">{{ gettext("Micah Alcorn") }}
